updated get creator and investors
